PIC-3395 udpate content

--- a/public/maintenance.html
+++ b/public/maintenance.html
@@ -78,7 +78,7 @@
         </div>
         <div class="header-proposition">
             <div class="content">
-                <a href="#" id="proposition-name">Ministry of Justice - Prepare a Case</a>
+                <a href="#" id="proposition-name">Prepare a case for sentence</a>
             </div>
         </div>
     </div>
@@ -92,18 +92,12 @@
 <!--end global-header-bar-->
 <div id="wrapper" class="group">
     <section id="content" role="main">
-        <!--
-        <div class="phase-banner">
-          <p>
-            <strong class="phase-tag">BETA</strong>
-          </p>
-        </div>
-        -->
         <div class="inner-block ">
             <article class="main-content">
-                <h1>This service is temporarily unavailable</h1>
-                <p>We are carrying out maintenance.</p>
-                <p>Please check back soon.</p>
+                <h1>Sorry, the service is unavailable</h1>
+                <p>Prepare a case for sentence will be unavailable from 5:30pm on Monday 23 October for up to 1 hour.</p>
+                <p>You should use Libra or Common Platform to see case lists during this time.</p>
+                <p>You can request an update on when you can access the service again on the <a href="https://teams.microsoft.com/l/channel/19%3a8f91039f983642a3a704091dd1eb5b3f%40thread.tacv2/Feedback%2520and%2520queries?groupId=11fe98ab-bd31-44aa-ab95-8ab68808964a&tenantId=c6874728-71e6-41fe-a9e1-2e8c36776ad8">Microsoft Teams channel.</a></p>
             </article>
         </div>
     </section>
